RigthCodeGIT/Resultados/ArquivoResultado.txt

===============================================================
Disciplina: Programação
Data: Fri May 09 08:37:57 BRT 2014
Caminho do Arquivo: C:\Users\EDWARD\Desktop\Workspace\Projeto_Teste_Singleton_5\src\br\edu\fafica\alunocinco/Launch.java
Compilação: Arquivo Não compilado

C:\Users\EDWARD\Desktop\Workspace\Projeto_Teste_Singleton_5\src\br\edu\fafica\alunocinco\Launch.java:11: error: cannot find symbol
		Singleton s1 = Singleton.getInstance();
		^
  symbol:   class Singleton
  location: class Launch
C:\Users\EDWARD\Desktop\Workspace\Projeto_Teste_Singleton_5\src\br\edu\fafica\alunocinco\Launch.java:11: error: cannot find symbol
		Singleton s1 = Singleton.getInstance();
		               ^
  symbol:   variable Singleton
  location: class Launch
C:\Users\EDWARD\Desktop\Workspace\Projeto_Teste_Singleton_5\src\br\edu\fafica\alunocinco\Launch.java:12: error: cannot find symbol
		Singleton s2 = Singleton.getInstance();
		^
  symbol:   class Singleton
  location: class Launch
C:\Users\EDWARD\Desktop\Workspace\Projeto_Teste_Singleton_5\src\br\edu\fafica\alunocinco\Launch.java:12: error: cannot find symbol
		Singleton s2 = Singleton.getInstance();
		               ^
  symbol:   variable Singleton
  location: class Launch
C:\Users\EDWARD\Desktop\Workspace\Projeto_Teste_Singleton_5\src\br\edu\fafica\alunocinco\Launch.java:13: error: cannot find symbol
		Singleton s3 = Singleton.getInstance();
		^
  symbol:   class Singleton
  location: class Launch
C:\Users\EDWARD\Desktop\Workspace\Projeto_Teste_Singleton_5\src\br\edu\fafica\alunocinco\Launch.java:13: error: cannot find symbol
		Singleton s3 = Singleton.getInstance();
		               ^
  symbol:   variable Singleton
  location: class Launch
C:\Users\EDWARD\Desktop\Workspace\Projeto_Teste_Singleton_5\src\br\edu\fafica\alunocinco\Launch.java:14: error: cannot find symbol
		Singleton s4 = Singleton.getInstance();
		^
  symbol:   class Singleton
  location: class Launch
C:\Users\EDWARD\Desktop\Workspace\Projeto_Teste_Singleton_5\src\br\edu\fafica\alunocinco\Launch.java:14: error: cannot find symbol
		Singleton s4 = Singleton.getInstance();
		               ^
  symbol:   variable Singleton
  location: class Launch
C:\Users\EDWARD\Desktop\Workspace\Projeto_Teste_Singleton_5\src\br\edu\fafica\alunocinco\Launch.java:15: error: cannot find symbol
		Singleton s5 = Singleton.getInstance();
		^
  symbol:   class Singleton
  location: class Launch
C:\Users\EDWARD\Desktop\Workspace\Projeto_Teste_Singleton_5\src\br\edu\fafica\alunocinco\Launch.java:15: error: cannot find symbol
		Singleton s5 = Singleton.getInstance();
		               ^
  symbol:   variable Singleton
  location: class Launch
C:\Users\EDWARD\Desktop\Workspace\Projeto_Teste_Singleton_5\src\br\edu\fafica\alunocinco\Launch.java:16: error: cannot find symbol
		Singleton s6 = Singleton.getInstance();
		^
  symbol:   class Singleton
  location: class Launch
C:\Users\EDWARD\Desktop\Workspace\Projeto_Teste_Singleton_5\src\br\edu\fafica\alunocinco\Launch.java:16: error: cannot find symbol
		Singleton s6 = Singleton.getInstance();
		               ^
  symbol:   variable Singleton
  location: class Launch
12 errors

===============================================================
Disciplina: Programação
Data: Fri May 09 08:37:57 BRT 2014
Caminho do Arquivo: C:\Users\EDWARD\Desktop\Workspace\Projeto_Teste_Singleton_5\src\br\edu\fafica\alunocinco/Singleton.java
Compilação: Arquivo Compilador com Sucesso

